--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
-    <meta charset="ISO-8859-1">
-    <title>Student Management System</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <meta charset="ISO-8859-1">
+        <title>Student Management System</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     </head>
     <body>
         <main>
@@ -11,6 +11,13 @@
                 <div class="row">
                     <h1>Student List</h1>
                 </div>
+                <div class="row">
+                    <div class="col-lg-3">
+                        <a th:href="@{students/new}" class="btn btn-primary btn-sm mb-3"> Add Student </a>
+                    </div>
+                
+                </div>
+                
                 <table class="table table-striped">
                     <thead class="table-dark">
                         <tr>
@@ -25,7 +32,7 @@
                             <td th:text="${student.firstName}"></td>
                             <td th:text="${student.lastName}"></td>
                             <td th:text="${student.email}"></td>
-                            <td th:text="${student.firstName}"></td>
+
                         
                         </tr>                    
                     </tbody>
