--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -6,6 +6,22 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     </head>
     <body>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <a class="navbar-brand" href="#">Student Management System</a>
+        
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+              <li class="nav-item active">
+                <a class="nav-link" th:href="@{/students}">Student Management</a>
+              </li>
+
+            </ul>
+
+          </div>
+        </nav>
+    
+    
+    
         <main>
             <div class="container">
                 <div class="row">
