--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -12,9 +12,11 @@
           <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
               <li class="nav-item active">
-                <a class="nav-link" th:href="@{/students}">Student Management</a>
+                <a class="nav-link" th:href="@{/students}">Student List</a>
               </li>
-
+              <li class="nav-item active">
+                <a class="nav-link" th:href="@{/students/new}">Add Student</a>
+              </li>
             </ul>
 
           </div>
@@ -25,6 +27,7 @@
         <main>
             <div class="container">
                 <div class="row">
+                    <br />
                     <h1>Student List</h1>
                 </div>
                 <div class="row">
