--- a/src/main/resources/templates/create_student.html
+++ b/src/main/resources/templates/create_student.html
@@ -13,21 +13,22 @@
           <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
               <li class="nav-item active">
-                <a class="nav-link" th:href="@{/students}">Student Management</a>
+                <a class="nav-link" th:href="@{/students}">Student List</a>
               </li>
-
+              <li class="nav-item active">
+                <a class="nav-link" th:href="@{/students/new}">Add Student</a>
+              </li>
             </ul>
-
           </div>
         </nav>
         
         <br />
         <br />
-    
-    
+
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
+                    <br />
                     <h1 class="text-center">Create New Student</h1>
                     <div class="card-body">
                         <form th:action="@{/students}" th:object="${student}" method="POST">
@@ -60,16 +61,13 @@
                                 class="form-control" 
                                 placeholder="Enter Student Email"/>
                         </div>
+
                         <div class="box-footer">
                             <button type="submit" class="btn btn-primary">Submit</button>
                         </div>
-                        
                     </div>
-                </div>
-                
+                </div>  
             </div>
-        </div>
-    
-    
+        </div>    
     </body>
 </html>
